k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
    env: ${ENVIRONMENT}
spec:
  containers:
    - name: ${APP_NAME}
      image: ${IMAGE}
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: ${APP_PORT}
          protocol: TCP
  restartPolicy: Never
